--- a/package.json
+++ b/package.json
@@ -17,21 +17,29 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
+    "@types/compression": "0.0.34",
+    "@types/winston": "^2.3.6",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
     "express": "^4.16.1",
-    "unirest": "^0.5.1"
+    "unirest": "^0.5.1",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
+    "@types/chai": "^4.0.4",
     "@types/express": "^4.0.37",
+    "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.31",
+    "chai": "^4.1.2",
     "mocha": "^3.5.3",
     "nodemon": "^1.12.1",
     "sinon": "^4.0.0",
     "supertest": "^3.0.0",
     "ts-mocha": "^1.0.3",
     "tslint": "^5.7.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "typings": "^2.1.1"
   },
   "author": "",
   "license": "ISC"
