--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/compression": "0.0.34",
+    "@types/node": "^8.0.32",
     "@types/winston": "^2.3.6",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
