--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
-    "@types/compression": "0.0.34",
-    "@types/node": "^8.0.32",
-    "@types/winston": "^2.3.6",
     "@types/body-parser": "^1.16.5",
     "@types/chai": "^4.0.4",
+    "@types/compression": "0.0.34",
     "@types/express": "^4.0.37",
     "@types/mocha": "^2.2.43",
+    "@types/node": "^8.0.32",
     "@types/sinon": "^2.3.5",
+    "@types/winston": "^2.3.6",
     "chai": "^4.1.2",
     "chai-spies": "^0.7.1",
-    "mocha": "^3.5.3",
+    "eslint": "^4.8.0",
+    "mocha": "^3.5.2",
     "nodemon": "^1.12.1",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
