chore: rename package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sonar-gh-pr-qualitygate",
+  "name": "swingletree",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
