--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "serve-debug": "nodemon --inspect dist/server.js"
   },
   "dependencies": {
+    "@octokit/rest": "^15.2.6",
+    "@types/js-yaml": "^3.11.1",
+    "@types/jsonwebtoken": "^7.2.6",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "express": "^4.16.1",
@@ -22,12 +25,12 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
-    "@types/chai": "^4.0.4",
+    "@types/chai": "^4.1.3",
     "@types/compression": "0.0.34",
     "@types/express": "^4.0.37",
     "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.32",
-    "@types/sinon": "^2.3.5",
+    "@types/sinon": "^2.3.7",
     "@types/winston": "^2.3.6",
     "chai": "^4.1.2",
     "eslint": "^4.8.0",
