--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "express": "^4.16.1",
+    "inversify": "^4.13.0",
+    "reflect-metadata": "^0.1.12",
     "unirest": "^0.5.1",
     "winston": "^2.4.0"
   },
