--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
+    "experimentalDecorators": true,
     "target": "ES2016",
     "noImplicitAny": true,
     "moduleResolution": "node",
