--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -2,3 +2,9 @@ github:
   appId: # The AppId of your GitHub app instance (not installation!)
   keyFile:  # the key file of your GitHub App (you retrieve this from the App settings page)
   base: https://api.github.com # Github Api base url
+
+sonar:
+  token:
+  base:
+
+context: swingletree
