--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "module": "CommonJS",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "lib": ["es6"],
+    "types": ["reflect-metadata"],
     "target": "ES2016",
     "noImplicitAny": true,
     "moduleResolution": "node",
