--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/sinon": "^2.3.7",
     "@types/winston": "^2.3.6",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^4.8.0",
     "mocha": "^3.5.2",
     "nodemon": "^1.12.1",
