--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect dist/server.js"
+    "watch-debug": "nodemon --inspect dist/main.js"
   },
   "dependencies": {
     "@octokit/rest": "^15.2.6",
