--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "express": "^4.16.1",
+    "express-github-webhook": "^1.0.6",
     "inversify": "^4.13.0",
     "jsonwebtoken": "^8.2.1",
     "redis": "^2.8.0",
