--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@
   "language": "node_js",
   "node_js": "8",
   "script": [
-    "npm run build",
+    "npm ci"
     "npm run test"
+    "npm run build",
   ]
 }
