--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-{
-  "language": "node_js",
-  "node_js": "8",
-  "script": [
-    "npm ci"
-    "npm run test"
-    "npm run build",
-  ]
-}
+language: node_js
+node_js: 
+  - "8"
+script:
+  - "npm ci"
+  - "npm run test"
+  - "npm run build"
