--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-github-webhook": "^1.0.6",
     "inversify": "^4.13.0",
+    "js-yaml": "^3.11.0",
     "jsonwebtoken": "^8.2.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
