set default github base url

--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -9,7 +9,7 @@ storage:
 github:
   appId: 00000 # The AppId of your GitHub app instance (not installation!)
   keyFile: gh-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
-  base: http://localhost:4000 # Github Api base url
+  base: http://api.github.com # Github Api base url
   webhookSecret: # this is the webhook secret. You should set it.
 
 # SonarQube specific configuration
