--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "inversify": "^4.13.0",
     "js-yaml": "^3.11.0",
     "jsonwebtoken": "^8.2.1",
+    "pug": "^2.0.3",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "winston": "^2.4.2"
