--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "swingletree",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:error418/swingletree.git"
+  },
   "main": "index.js",
   "engines": {
     "node": ">=8"
