--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -15,3 +15,4 @@ github:
 # SonarQube specific configuration
 sonar:
   base: # list of sonarqube instances allowed to send webhook events
+  secret: # basic auth password protecting the webhook
