--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "swingletree",
-  "version": "1.0.0",
-  "description": "",
+  "description": "Enforce SonarQube quality gate checks in your GitHub pull requests",
   "repository": {
     "type": "git",
     "url": "git@github.com:error418/swingletree.git"
@@ -18,7 +17,8 @@
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
-    "watch-debug": "nodemon --inspect bin/main.js"
+    "watch-debug": "nodemon --inspect bin/main.js",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@octokit/rest": "^15.2.6",
@@ -53,12 +53,13 @@
     "eslint": "^4.19.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.3",
+    "semantic-release": "^15.5.4",
     "sinon": "^4.5.0",
     "sinon-chai": "^2.14.0",
     "ts-mocha": "^1.2.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
   },
-  "author": "",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "private": true
 }
