--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=2e3ff621caade74c60b0c8284b69010f65e7cefa8c469aece8fa405aa1ccedb4
 language: node_js
 node_js: 
   - "8"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - "npm i"
   - "npm run test"
   - "npm run build"
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
