--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/js-yaml": "^3.11.1",
     "@types/jsonwebtoken": "^7.2.6",
     "@types/redis": "^2.8.6",
+    "@types/request": "^2.47.1",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
@@ -37,6 +38,7 @@
     "pug": "^2.0.3",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
+    "request": "^2.88.0",
     "winston": "^2.4.2"
   },
   "devDependencies": {
