--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/basic-auth": "^1.1.2",
     "@types/js-yaml": "^3.11.1",
     "@types/jsonwebtoken": "^7.2.6",
+    "@types/nunjucks": "^3.1.0",
     "@types/redis": "^2.8.6",
     "@types/request": "^2.47.1",
     "basic-auth": "^2.0.0",
@@ -35,6 +36,7 @@
     "inversify": "^4.13.0",
     "js-yaml": "^3.11.0",
     "jsonwebtoken": "^8.2.1",
+    "nunjucks": "^3.1.3",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
