docs(pages): improve documentation pages

--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -4,6 +4,11 @@
   - installation
   - configure
 
+- title: Usage
+  docs:
+  - usage
+  - gradle
+
 - title: Extend Swingletree
   docs:
   - architecture
