--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
-  - "npm i"
+  - "npm ci"
   - "npm run test"
   - "npm run build"
 after_script:
