chore(npm): add `--exit` to ts-mocha script call

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   - "npm ci"
-  - "npm run test -- --exit"
+  - "npm run test"
   - "npm run build"
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
