--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "npm run build && nodemon bin/main.js",
     "build": "npm run build-ts && npm run tslint",
-    "test": "ts-mocha",
+    "test": "ts-mocha --exit",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
