fix(config): use `https` for github standard configuration

--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -7,7 +7,7 @@ storage:
 github:
   appId: 00000 # The AppId of your GitHub app instance (not installation!)
   keyFile: gh-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
-  base: http://api.github.com # Github Api base url
+  base: https://api.github.com # Github Api base url
   webhookSecret: # this is the webhook secret. You should set it.
   pendingCommitStatus: false # if set to true, Swingletree will send a "pending" commit status to github when receiving push events
   appPublicPage: # the GitHub App public page. Will be referenced in the Swingletree landing page.
