--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=8"
   },
   "scripts": {
-    "start": "npm run build && nodemon bin/main.js",
+    "start": "npm run build && node bin/main.js",
     "build": "npm run build-ts && npm run tslint",
     "test": "ts-mocha --exit",
     "build-ts": "tsc",
@@ -25,7 +25,7 @@
     "@types/basic-auth": "^1.1.2",
     "@types/js-yaml": "^3.12.0",
     "@types/jsonwebtoken": "^8.3.0",
-    "@types/nunjucks": "^3.1.0",
+    "@types/nunjucks": "^3.1.1",
     "@types/redis": "^2.8.10",
     "@types/request": "^2.48.1",
     "basic-auth": "^2.0.1",
@@ -48,13 +48,14 @@
     "@types/chai": "^4.1.7",
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.24",
-    "@types/sinon": "^7.0.5",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.9.4",
+    "@types/sinon": "^7.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.13.0",
     "mocha": "^5.2.0",
+    "mockserver": "^3.0.0",
     "nodemon": "^1.18.10",
     "semantic-release": "^15.13.3",
     "sinon": "^7.2.3",
