feat(config): improve env var configuration
improves configuration possibilities using `nconf`

BREAKING CHANGE:

Configuration data structure changed. Please see README for details.
Config files from previous versions are not compatible

--- a/test/config.yml
+++ b/test/config.yml
@@ -1,16 +1,17 @@
 github:
-  appId: 101
-  appPublicPage: "publicPage"
+  app:
+    id: 101
+    page: "publicPage"
+    keyfile: "test/app-key.test"
   base: "http://localhost:10101"
-  clientDebug: false
-  keyFile: "test/app-key.test"
-  webhookSecret: null
+  secret: "do not tell"
+  debug: false
 sonar:
   base: "http://localhost:10101"
-  context: "sonarqube"
+  context: "sonarqubetest"
   logWebhookEvents: false
-  secret: null
+  secret: "do not tell"
   token: "1234"
 storage:
   database: "http://localhost"
-  password: null
+  password: "somepassword"
