--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "inversify": "^5.0.1",
     "js-yaml": "^3.12.1",
     "jsonwebtoken": "^8.4.0",
+    "nconf": "^0.10.0",
     "nunjucks": "^3.1.7",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
@@ -49,6 +50,7 @@
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
     "@types/mocha": "^5.2.6",
+    "@types/nconf": "^0.10.0",
     "@types/node": "^11.9.4",
     "@types/sinon": "^7.0.6",
     "chai": "^4.2.0",
