--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -5,13 +5,13 @@ storage:
 
 # GitHub specific configuration
 github:
-  appId: 00000 # The AppId of your GitHub app instance (not installation!)
-  keyFile: gh-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
+  app:
+    id: # The AppId of your GitHub app instance (not installation!)
+    page: # the GitHub App public page. Will be referenced in the Swingletree landing page.
+    keyfile: gh-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
   base: https://api.github.com # Github Api base url
-  webhookSecret: # this is the webhook secret. You should set it.
-  pendingCommitStatus: false # if set to true, Swingletree will send a "pending" commit status to github when receiving push events
-  appPublicPage: # the GitHub App public page. Will be referenced in the Swingletree landing page.
-  clientDebug: false # runs octokit in debug mode. Use this only for debug, since this can reveal secret tokens in the logs!
+  secret: # this is the webhook secret. You should set it.
+  debug: false # runs octokit in debug mode. Use this only for debug, since this can reveal secret tokens in the logs!
 
 # SonarQube specific configuration
 sonar:
@@ -19,4 +19,4 @@ sonar:
   base: # SonarQube base url
   context: sonarqube # defines the check status name
   token: # API token
-  logWebhookEvents: false # log SonarQube webhook event requests on debug level
+  debug: false # log SonarQube webhook event requests on debug level
