dev(config): fix storage configuration keys to match docs

--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -1,6 +1,6 @@
 # storage configuration
 storage:
-  database: localhost # database host
+  host: localhost # database host
   password: # database password
 
 # GitHub specific configuration
