--- a/test/config.yml
+++ b/test/config.yml
@@ -13,5 +13,5 @@ sonar:
   secret: "do not tell"
   token: "1234"
 storage:
-  database: "http://localhost"
+  host: "http://localhost"
   password: "somepassword"
