--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express": "^4.16.4",
     "express-github-webhook": "^1.0.6",
     "inversify": "^5.0.1",
-    "js-yaml": "^3.12.1",
+    "js-yaml": "^3.12.2",
     "jsonwebtoken": "^8.5.0",
     "nconf": "^0.10.0",
     "nunjucks": "^3.1.7",
@@ -35,10 +35,10 @@
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "@octokit/rest": "^16.16.3"
   },
   "devDependencies": {
-    "@octokit/rest": "^16.16.0",
     "@types/basic-auth": "^1.1.2",
     "@types/js-yaml": "^3.12.0",
     "@types/jsonwebtoken": "^8.3.0",
@@ -51,8 +51,8 @@
     "@types/express": "^4.16.1",
     "@types/mocha": "^5.2.6",
     "@types/nconf": "^0.10.0",
-    "@types/node": "^11.9.5",
-    "@types/sinon": "^7.0.6",
+    "@types/node": "^11.9.6",
+    "@types/sinon": "^7.0.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.14.1",
@@ -60,7 +60,7 @@
     "mockserver": "^3.0.0",
     "nodemon": "^1.18.10",
     "semantic-release": "^15.13.3",
-    "sinon": "^7.2.4",
+    "sinon": "^7.2.5",
     "sinon-chai": "^3.3.0",
     "ts-mocha": "^2.0.0",
     "tslint": "^5.13.0",
