--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "release": "semantic-release"
   },
   "dependencies": {
+    "@octokit/rest": "^16.16.3",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-github-webhook": "^1.0.6",
     "inversify": "^5.0.1",
-    "js-yaml": "^3.12.2",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.0",
     "nconf": "^0.10.0",
     "nunjucks": "^3.1.7",
@@ -35,34 +36,33 @@
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
-    "winston": "^3.2.1",
-    "@octokit/rest": "^16.16.3"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.2",
-    "@types/js-yaml": "^3.12.0",
-    "@types/jsonwebtoken": "^8.3.0",
-    "@types/nunjucks": "^3.1.1",
-    "@types/redis": "^2.8.10",
-    "@types/request": "^2.48.1",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.7",
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
+    "@types/js-yaml": "^3.12.0",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/mocha": "^5.2.6",
     "@types/nconf": "^0.10.0",
     "@types/node": "^11.9.6",
+    "@types/nunjucks": "^3.1.1",
+    "@types/redis": "^2.8.10",
+    "@types/request": "^2.48.1",
     "@types/sinon": "^7.0.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.14.1",
-    "mocha": "^5.2.0",
+    "mocha": "^6.1.3",
     "mockserver": "^3.0.0",
     "nodemon": "^1.18.10",
-    "semantic-release": "^15.13.3",
+    "semantic-release": "^15.13.11",
     "sinon": "^7.2.5",
     "sinon-chai": "^3.3.0",
-    "ts-mocha": "^2.0.0",
+    "ts-mocha": "^6.0.0",
     "tslint": "^5.13.0",
     "typescript": "^3.3.3"
   },
