dev: disable zap by default

--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -26,7 +26,7 @@ sonar:
 
 # Zap specific configuration
 zap:
-  enabled: true
+  enabled: false
   secret: # basic auth password protecting the webhook
   context: security/zap # defines the check status name
   debug: false # log zap webhook event requests on debug level
