dev(twistlock): fix configuration parameters

--- a/swingletree.conf.yaml
+++ b/swingletree.conf.yaml
@@ -30,3 +30,10 @@ zap:
   secret: # basic auth password protecting the webhook
   context: security/zap # defines the check status name
   debug: false # log zap webhook event requests on debug level
+
+# Twistlock specific configuration
+twistlock:
+  enabled: false
+  secret: # basic auth password protecting the webhook
+  context: security/twistlock # defines the check status name
+  debug: false # log zap webhook event requests on debug level
