--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "nconf": "^0.10.0",
+    "node-cache": "^4.2.0",
     "nunjucks": "^3.2.0",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
@@ -50,6 +51,7 @@
     "@types/mocha": "^5.2.6",
     "@types/nconf": "^0.10.0",
     "@types/node": "^12.0.0",
+    "@types/node-cache": "^4.1.3",
     "@types/nunjucks": "^3.1.1",
     "@types/redis": "^2.8.12",
     "@types/request": "^2.48.1",
