--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "semantic-release": "^15.13.18",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
+    "sinon-express-mock": "^2.2.0",
     "ts-mocha": "^6.0.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
