--- a/helm/requirements.yaml
+++ b/helm/requirements.yaml
@@ -1,4 +1,5 @@
 dependencies:
-  - name: stable/redis
+  - name: redis
     version: 8.0.14
+    repository: https://kubernetes-charts.storage.googleapis.com/
     condition: redis.enabled
