--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/basic-auth": "^1.1.2",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.7",
+    "@types/chai-things": "0.0.33",
     "@types/compression": "0.0.36",
     "@types/express": "^4.17.0",
     "@types/js-yaml": "^3.12.1",
@@ -58,6 +59,7 @@
     "@types/sinon": "^7.0.13",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chai-things": "^0.2.0",
     "eslint": "^6.1.0",
     "mocha": "^6.2.0",
     "mockserver": "^3.1.0",
