--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "scripts": {
     "start": "npm run build && node bin/main.js",
-    "build": "npm run build-ts && npm run tslint",
+    "sass": "node-sass views/sass/main.scss -o static/css",
+    "sass:watch": "npm run sass -- -w",
+    "build": "npm run sass && npm run build-ts && npm run tslint",
     "test": "ts-mocha --exit",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
@@ -32,6 +34,7 @@
     "inversify": "^5.0.1",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "nconf": "^0.10.0",
     "node-cache": "^4.2.0",
     "nunjucks": "^3.2.0",
@@ -64,6 +67,7 @@
     "eslint": "^6.1.0",
     "mocha": "^6.2.0",
     "mockserver": "^3.1.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "semantic-release": "^15.13.18",
     "sinon": "^7.3.2",
