--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ remote_theme: error418/jekyll-doc-theme
 title: Swingletree
 email: 
 description:  >-
-  Integrate SonarQube into GitHub Pull Requests
+  Simplify your build feedback
 lang: de-DE
 
 logo: assets/images/icon.svg
@@ -38,6 +38,9 @@ nav:
   - id: showcase
     url: /showcase.html
     name: Showcase
+  - id: support
+    url: /support.html
+    name: Support
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
