--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,13 +34,16 @@ analytics:
   enable: true
   id: UA-111350981-3
 
+  head:
+  include: head-ext.html
+
 nav:
   - id: showcase
     url: /showcase.html
     name: Showcase
-#  - id: support
-#    url: /support.html
-#    name: Support
+  - id: support
+    url: /support.html
+    name: Support
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
