dev: improve nebula report extraction

--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -7,6 +7,7 @@
 - title: Components
   docs:
   - components/elastic
+  - components/nebula
   - components/sonarqube
   - components/twistlock
   - components/zap
